docs/v0.3/_sources/api/gwpy.segments.DataQualityDict.rst.txt


DataQualityDict
=============================

.. currentmodule:: gwpy.segments

.. autoclass:: DataQualityDict
   :no-inherited-members:

   
     None
   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~DataQualityDict.clear
      ~DataQualityDict.copy
      ~DataQualityDict.from_veto_definer_file
      ~DataQualityDict.fromkeys
      ~DataQualityDict.get
      ~DataQualityDict.has_key
      ~DataQualityDict.intersection
      ~DataQualityDict.items
      ~DataQualityDict.iteritems
      ~DataQualityDict.iterkeys
      ~DataQualityDict.itervalues
      ~DataQualityDict.keys
      ~DataQualityDict.plot
      ~DataQualityDict.pop
      ~DataQualityDict.popitem
      ~DataQualityDict.populate
      ~DataQualityDict.query
      ~DataQualityDict.query_dqsegdb
      ~DataQualityDict.query_segdb
      ~DataQualityDict.read
      ~DataQualityDict.setdefault
      ~DataQualityDict.union
      ~DataQualityDict.update
      ~DataQualityDict.values
      ~DataQualityDict.viewitems
      ~DataQualityDict.viewkeys
      ~DataQualityDict.viewvalues
      ~DataQualityDict.write

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: clear
   .. automethod:: copy
   .. automethod:: from_veto_definer_file
   .. automethod:: fromkeys
   .. automethod:: get
   .. automethod:: has_key
   .. automethod:: intersection
   .. automethod:: items
   .. automethod:: iteritems
   .. automethod:: iterkeys
   .. automethod:: itervalues
   .. automethod:: keys
   .. automethod:: plot
   .. automethod:: pop
   .. automethod:: popitem
   .. automethod:: populate
   .. automethod:: query
   .. automethod:: query_dqsegdb
   .. automethod:: query_segdb
   .. automethod:: read
   .. automethod:: setdefault
   .. automethod:: union
   .. automethod:: update
   .. automethod:: values
   .. automethod:: viewitems
   .. automethod:: viewkeys
   .. automethod:: viewvalues
   .. automethod:: write

   
   